--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"homepage": "https://parthmital.github.io/Portfolio",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview",
-		"deploy": "gh-pages -d dist"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"preact": "^10.26.5"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.10.1",
-		"gh-pages": "^6.3.0",
 		"vite": "^6.3.5"
 	}
 }
